# gpui-editor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/buffer/: Cargo.toml
crates/buffer/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: actions.rs  cursor_blink.rs  document.rs  editor.rs  editor_element.rs  gutter_element.rs  lib.rs  movement.rs
crates/gpui-editor-app/: Cargo.toml
crates/gpui-editor-app/src/: main.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: highlighter.rs  lib.rs  theme.rs
crates/syntax/src/languages/: mod.rs  rust.rs  typescript.rs
src/: buffer.rs  document.rs  editor.rs  editor_element.rs  gutter_element.rs  main.rs  syntax.rs  theme.rs
src/languages/: mod.rs  rust.rs  typescript.rs
