[package]
name = "gpui-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "*" }
unicode-segmentation = "1.12"
ropey = "1.6"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"

[dev-dependencies]
gpui = { version = "*", features = ["test-support"] }
