[workspace]
resolver = "2"
members = [
  "crates/buffer",
  "crates/syntax",
  "crates/editor",
  "crates/gpui-editor-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# External crates
gpui = { git = "https://github.com/zed-industries/zed" }
unicode-segmentation = "1.12"
ropey = "1.6"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
once_cell = "1.20"
parking_lot = "0.12"
smol = "2.0"

# Workspace member crates
buffer = { path = "crates/buffer" }
syntax = { path = "crates/syntax" }
editor = { path = "crates/editor" }
